--- a/src/main/Home_Data.form
+++ b/src/main/Home_Data.form
@@ -95,7 +95,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="&#x3a3;&#x3cd;&#x3bd;&#x3b4;&#x3b5;&#x3c3;&#x3b7; &#x3a7;&#x3c1;&#x3ae;&#x3c3;&#x3c4;&#x3b7;"/>
+            <TitledBorder title="&#x3a3;&#x3cd;&#x3bd;&#x3b4;&#x3b5;&#x3c3;&#x3b7; &#x3c7;&#x3c1;&#x3ae;&#x3c3;&#x3c4;&#x3b7;"/>
           </Border>
         </Property>
       </Properties>
